[gd_scene load_steps=5 format=3 uid="uid://vmtxgpx5i7lx"]

[ext_resource type="Script" uid="uid://dm7iotbesfk15" path="res://scripts/microgame/password/password.gd" id="1_ibdrh"]
[ext_resource type="Material" uid="uid://p7mc2hcyvbwt" path="res://assets/microgame/password/distort.tres" id="2_x26t2"]

[sub_resource type="FontFile" id="FontFile_x26t2"]
cache/0/48/0/ascent = 0.0
cache/0/48/0/descent = 0.0
cache/0/48/0/underline_position = 0.0
cache/0/48/0/underline_thickness = 0.0
cache/0/48/0/scale = 1.0
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_ibdrh"]
font = SubResource("FontFile_x26t2")
font_size = 48

[node name="password" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ibdrh")
text_material = ExtResource("2_x26t2")
metadata/_custom_type_script = "uid://bb26s1tf5ti1f"

[node name="label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
text = "Type the characters below:"
horizontal_alignment = 1

[node name="label2" type="Label" parent="."]
texture_filter = 5
material = ExtResource("2_x26t2")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "x83vj9"
label_settings = SubResource("LabelSettings_ibdrh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="text_edit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -50.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
text = "x83jv9"

[connection signal="text_changed" from="text_edit" to="." method="_text_changed"]
